--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">building-app</string>
-    <string name="title_activity_main">building-app</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">عقارك</string>
+    <string name="title_activity_main">عقارك</string>
+    <string name="package_name">app.3kark.app</string>
+    <string name="custom_url_scheme">app.3kark.app</string>
 </resources>
