--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">عقارك</string>
     <string name="title_activity_main">عقارك</string>
-    <string name="package_name">app.3kark.app</string>
-    <string name="custom_url_scheme">app.3kark.app</string>
+    <string name="package_name">app.building.app</string>
+    <string name="custom_url_scheme">app.building.app</string>
 </resources>
